k8s-addational/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leave-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # INSERT YOUR ACM CERTIFICATE ARN HERE
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:268145348964:certificate/abefd3e5-fe3e-4230-a100-8bdcfffff719"
    # Redirect HTTP to HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Health checks
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - http:
        paths:
          # Route API requests to Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          # Route everything else to Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
